--- a/projects/hmcts-form-builder/package.json
+++ b/projects/hmcts-form-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hmcts-form-builder",
+  "name": "example-npm-module",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
