--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.6",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve  --port=3000",
+    "start": "ng serve  --port=6666",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -38,6 +38,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "compodoc": "0.0.41",
     "govuk-frontend": "^2.6.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
