--- a/projects/hmcts-form-builder/package.json
+++ b/projects/hmcts-form-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-npm-module",
+  "name": "ng-form-builder",
   "version": "0.0.5",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
